--- a/day3ex.ipynb
+++ b/day3ex.ipynb
@@ -1343,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1366,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1514,7 +1514,7 @@
        "11      Scouts     2nd       Ali             3             70"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1526,29 +1526,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(15.25)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# What is the mean preTestScore from the regiment Nighthawks?\n"
+    "# What is the mean preTestScore from the regiment Nighthawks?\n",
+    "regiment.groupby('regiment')['preTestScore'].mean()['Nighthawks']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"8\" halign=\"left\">preTestScore</th>\n",
+       "      <th colspan=\"8\" halign=\"left\">postTestScore</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>company</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1st</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>6.666667</td>\n",
+       "      <td>8.524475</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>57.666667</td>\n",
+       "      <td>27.485754</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>34.25</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>94.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2nd</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>15.500000</td>\n",
+       "      <td>14.652645</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.25</td>\n",
+       "      <td>13.5</td>\n",
+       "      <td>29.25</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>67.000000</td>\n",
+       "      <td>14.057027</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>58.25</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>94.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        preTestScore                                                      \\\n",
+       "               count       mean        std  min   25%   50%    75%   max   \n",
+       "company                                                                    \n",
+       "1st              6.0   6.666667   8.524475  2.0  3.00   3.5   4.00  24.0   \n",
+       "2nd              6.0  15.500000  14.652645  2.0  2.25  13.5  29.25  31.0   \n",
+       "\n",
+       "        postTestScore                                                       \n",
+       "                count       mean        std   min    25%   50%   75%   max  \n",
+       "company                                                                     \n",
+       "1st               6.0  57.666667  27.485754  25.0  34.25  66.0  70.0  94.0  \n",
+       "2nd               6.0  67.000000  14.057027  57.0  58.25  62.0  68.0  94.0  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Present general statistics by company"
+    "#Present general statistics by company\n",
+    "regiment.groupby('company').describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "company\n",
+       "1st     6.666667\n",
+       "2nd    15.500000\n",
+       "Name: preTestScore, dtype: float64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# What is the mean of each company's preTestScore?"
+    "# What is the mean of each company's preTestScore?\n",
+    "regiment.groupby('company')['preTestScore'].mean()"
    ]
   },
   {
@@ -1585,35 +1742,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Present the mean preTestScores grouped by regiment and company without heirarchical indexing\n",
-    "regiment.groupby(['regiment','company'])['preTestScore'].mean()"
+    "#Present the mean preTestScores grouped by regiment and company without heirarchical indexing\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000001736DAA2550>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Group the entire dataframe by regiment and company"
+    "# Group the entire dataframe by regiment and company\n",
+    "regiment.groupby(['regiment','company'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "regiment    company\n",
+       "Dragoons    1st        2\n",
+       "            2nd        2\n",
+       "Nighthawks  1st        2\n",
+       "            2nd        2\n",
+       "Scouts      1st        2\n",
+       "            2nd        2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#What is the number of observations in each regiment and company"
+    "#What is the number of observations in each regiment and company\n",
+    "regiment.groupby(['regiment','company']).size()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Iterate over a group and print the name and the whole data from the regiment"
+    "#Iterate over a group and print the name and the whole data from the regiment\n"
    ]
   }
  ],
